Added Time Duration
