# src/server/index.js
@@ -9,6 +9,7 @@ const postLogs = require('./api/postLogs');
 const getGenerations = require('./api/getGenerations');
 const findGeneration = require('./api/findGeneration');
 const findDateRange = require('./api/findDateRange');
+const findDuration = require('./api/findDuration');
 
 // URL to the database
 const dbRoute = 'mongodb+srv://dbadmin:GHQzRClBsvIEglUx@kabordonaro-cc9jp.gcp.mongodb.net/shield?retryWrites=true';
@@ -45,6 +46,7 @@ validator.init(path.join(__dirname, 'api/api.yaml')).then(() => {
     router.get('/generations', validator.validate, getGenerations);
     router.get('/find/generation', validator.validate, findGeneration);
     router.get('/find/dates', validator.validate, findDateRange);
+    router.get('/find/duration', validator.validate, findDuration);
 
     // append /api for our http requests
     app.use('/api', router);
